--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         #box .upperBox {
             box-sizing: border-box;
-            width: 474px;
+            width: 500px;
             height: 790px;
             margin: 0 auto;
             background: url(images/3.jpg) center top;
@@ -218,6 +218,7 @@
         #box .upperBox .wordSpan {
             float: left;
             font-size: 18px;
+            color:black;
         }
 
         #box .upperBox .wordSpan {
