--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>love</title>
+        content="width=width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>我喜欢你</title>
     <style>
         * {
             margin: 0;
@@ -22,7 +22,6 @@
             height: 880px;
             margin: 40px auto;
             position: relative;
-            opacity: 0.7;
         }
 
         #box .box {
@@ -202,7 +201,7 @@
 
         #box .upperBox {
             box-sizing: border-box;
-            width: 500px;
+            width: 474px;
             height: 790px;
             margin: 0 auto;
             background: url(images/3.jpg) center top;
@@ -218,7 +217,7 @@
         #box .upperBox .wordSpan {
             float: left;
             font-size: 18px;
-            color:black;
+            border: black;
         }
 
         #box .upperBox .wordSpan {
@@ -398,9 +397,8 @@
         function upperBlock() {
             var word = upPWord.innerText;
             upPWord.innerHTML = '';
-            upperBox.style.display = 'block';
-            upperBox.style.opacity = '0.7';
             box.style.display = 'none';
+            upperBox.style.display = 'block';
             var t4 = setInterval(() => {
                 upPWord.innerHTML = word.substring(0, index++) + '<span style="color: red;">❤</span>';
                 wordNum++;
